--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="col-right">
                 <h1 class="section-title"><strong>ABOUT<span>-ME</strong></span></h1>
 
-            <h1>   <p>Hey, I am Ayush Sharma, currently pursuing B-Tech (Computer Sciece ) from Nsut East Campus,New Delhi.</p>
+            <h1>   <p>Hey, I am Ayush Sharma, currently pursuing B-Tech (Computer Sciece ) from IIMT COLLEGE OF ENGINEERING, Greater Noida.</p>
             <span></span>
         </h1>
                 <a  style="border-width: 7px; border-radius: 20px;"  href="resume.pdf" download="resume.pdf" class="cta">Download Resume</a>
