--- a/index.html
+++ b/index.html
@@ -192,10 +192,10 @@
 
                 </div>
                 <div class="social-item">
-                   <a href="#" class="fa fa-facebook"></a>
+                   <a href="https://m.facebook.com/100015645606103/" class="fa fa-facebook"></a>
                 </div>
                 <div class="social-item">
-                   <a class="fa fa-github" style="font-size:50px; color:white;padding-top: 1px;"></a>
+                   <a class="https://github.com/PHADICODER01" style="font-size:50px; color:white;padding-top: 1px;"></a>
                 </div>
             </div>
             <p>Copyright &copy; 2021 AYUSH SHARMA. All rights reserved</p>
