--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
       <!-- Angular -->
       <div class="skill flex items-center space-x-4">
-        <img src="angular.png" alt="Angular" class="w-8 h-8">
+        <img src="Angular.png" alt="Angular" class="w-8 h-8">
         <div class="flex-1">
           <div class="flex justify-between mb-1 font-semibold text-gray-700">
             <span>Angular</span>
@@ -352,3 +352,4 @@
    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
     </body>
 </html>
+
